--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,36 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header class="header">
+    Flexbox Playground
+  </header>
   <div class=container>
-    <div class="box box1">Box 1</div>
-    <div class="box box2">Box 2</div>
-    <div class="box box3">Box 3</div>
-    <div class="box box4">Box 4</div>
-    <div class="box box5">Box 5</div>
-    <div class="box box6">Box 6</div>
-    <div class="box box7">Box 7</div>
-    <div class="box box8">Box 8</div>
-    <div class="box box9">Box 9</div>
-    <div class="box box10">Box 10</div>
+    <div class="box box1">1</div>
+    <div class="box box2">2</div>
+    <div class="box box3">3</div>
+    <div class="box box4">4</div>
+    <div class="box box5">5</div>
+    <div class="box box6">6</div>
+    <div class="box box7">7</div>
+    <div class="box box8">8</div>
+    <div class="box box9">9</div>
+    <div class="box box10">10</div>
   </div>
+
+  <div class="items">
+    <h1 class="item item1">first</h1>
+    <h1 class="item item2">second</h1>
+    <h1 class="item item3">third</h1>
+  </div>
+
+  <div class="pooptainer">
+    <div class="red">
+      <p class="green">In Chrome 52 and later, the green box should be centered vertically and horizontally in the red box.</p>
+    </div>
+  </div>
+  <br><br><br><br><br><br><br><br>
+  <footer class="footer">
+    Footer by mlars . . .
+  </footer>
 </body>
 </html>
