--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="header">
-    Flexbox Playground
+    <h1>Flexbox Playground</h1>
   </header>
   <div class=container>
     <div class="box box1">1</div>
@@ -24,18 +24,29 @@
     <div class="box box10">10</div>
   </div>
 
+  <div class="centered">
+    <section class="cards">
+      <article class="card card1">
+        <p>Card One</p>
+      </article>
+      <article class="card card2">
+        <p>Card Two</p>
+      </article>
+      <article class="card card3">
+        <p>Card Three</p>
+      </article>
+      <article class="card card4">
+        <p>Card Four</p>
+      </article>
+    </section>
+  </div>
+
   <div class="items">
     <h1 class="item item1">first</h1>
     <h1 class="item item2">second</h1>
     <h1 class="item item3">third</h1>
   </div>
 
-  <div class="pooptainer">
-    <div class="red">
-      <p class="green">In Chrome 52 and later, the green box should be centered vertically and horizontally in the red box.</p>
-    </div>
-  </div>
-  <br><br><br><br><br><br><br><br>
   <footer class="footer">
     Footer by mlars . . .
   </footer>
