index2 and style2 added

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
   <div class="centered">
     <section class="cards">
       <article class="card card1">
-        <p>Card One</p>
+        <p>Card One: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
       </article>
       <article class="card card2">
         <p>Card Two</p>
@@ -50,5 +50,41 @@
   <footer class="footer">
     Footer by mlars . . .
   </footer>
+
+  <div class="container2"> 
+    <header>
+        <nav>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </nav>
+        <button></button>
+    </header>
+
+    <aside class="sidebar">
+      <h3></h3>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </aside>
+
+    <section class="main">
+      <h2></h2>
+      <p></p>
+      <p> </p>
+    </section>
+
+    <footer>
+      <h3></h3>
+      <p></p>
+    </footer>
+</div>
+
 </body>
 </html>
