--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,12 @@
     <h1>Flexbox Playground</h1>
   </header>
   <div class=container>
-    <div class="box box1">1</div>
-    <div class="box box2">2</div>
-    <div class="box box3">3</div>
-    <div class="box box4">4</div>
-    <div class="box box5">5</div>
-    <div class="box box6">6</div>
-    <div class="box box7">7</div>
-    <div class="box box8">8</div>
-    <div class="box box9">9</div>
-    <div class="box box10">10</div>
+    <div class="box box1">1 😀</div>
+    <div class="box box2">2 👅</div>
+    <div class="box box3">3 🍭</div>
+    <div class="box box4">4 🏀</div>
+    <div class="box box5">5 💩</div>
+    <div class="box box6">6 🎻</div>
   </div>
 
   <div class="centered">
